--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_API_KEY = 50j19knn4humhpidsoe7p7w1xn7r1kr871hfl9vh
-Endpoints = https://www.meteosource.com/api/v1/free/point?place_id=jharia&sections=all&timezone=UTC&language=en&units=metric&key=50j19knn4humhpidsoe7p7w1xn7r1kr871hfl9vh
+VITE_API_KEY = 8d51b2ac90mshf62c2da71bf57c2p1c5634jsn8d51bd702ab9
